added login credentials

--- a/docs/tldt.ini
+++ b/docs/tldt.ini
@@ -1,5 +1,9 @@
 [Auth]
 token = bla
+user = cbalea
+password = xx
+repo_user = django
+repo_name = django
 
 [ActiveParsers]
 xunit = tldt.parsers.xunit
