update sample tldt.ini with pylint parser

--- a/docs/tldt.ini
+++ b/docs/tldt.ini
@@ -1,15 +1,22 @@
 [Auth]
 token = bla
-username = cbalea
-password = xx
-repo_owner = django
-repo_name = django
+username = username
+password = password
+repo_owner = rciorba
+repo_name = tldt
 
 [ActiveParsers]
 xunit = tldt.parsers.xunit
+pylint = tldt.parsers.pylint_parser
 
 [parser-xunit]
-file = output.xml
+file = nosetests.xml
+
+[parser-pylint]
+file = pylint.txt
 
 [Poller]
 poll_interval = 60
+
+[repo]
+local = /path/to/repos/tltd
